discussion/kv_engine/153272/153272_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46216: Check log format strings at compile-time

Make use of the FMT_STRING macro to check format strings at
compile-time using fmtlib v7.

If a call to the logger omits one or more arguments, then a
compile-time error will be seen - given the following (incorrect) call
missing a argument for 'bar':

    EP_LOG_DEBUG("Foo:{} bar:{}", foo);

The compiler fails with:

   fmt/format.h:2873:27: error: constexpr variable 'invalid_format' must be initialized by a constant expression

(admittedly not the most obvious, but you get what you get with C++
compiler errors...)

The trickiest part here is getting the logger to accept both calls
with format strings and variable args (like the example above), and
plain, single argument fixed string - e.g.

    EP_LOG_DEBUG("Something interesting happened");

This is because "Something interesting happened" isn't considered to
be a valid formatting string by fmtlib, and hence will trigger a
compile-time error if you attempt to verify it as such. Therefore it
is necessary to use the preprocessor to pass through such messages
without applying the FMT_STRING() macro to them.

Change-Id: I32c37dfc9672663e5741433885787f1e941fe795

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-05-27 11:26:00.000000000
Message: 
Patch Set 2: Patch Set 1 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-05-27 11:26:12.000000000
Message: 
Topic CC.next removed
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-27 12:00:35.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30852/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_logger_impl.h:26:24:
error: no template named "make_args_checked" in namespace "fmt::v7::detail"; did you mean "fmt::make_args_checked"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30852/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9207/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6: error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:24: error: use of undeclared identifier "spdlog" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:26:24: error: no template named "make_args_checked" in namespace "fmt::v7::detail"; did you mean "fmt::make_args_checked"? [clang-diagnostic-error]
    logInner(lvl, fmt, fmt::detail::make_args_checked<Args...>(fmt, args...));
                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                       fmt::make_args_checked
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1617:13: note: "fmt::make_args_checked" declared here
inline auto make_args_checked(const S& format_str,
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:42:25: error: no template named "make_args_checked" in namespace "fmt::v7::detail"; did you mean "fmt::make_args_checked"? [clang-diagnostic-error]
    logInner(lvl, "{}", fmt::detail::make_args_checked<T>("{}", msg));
                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                        fmt::make_args_checked
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1617:13: note: "fmt::make_args_checked" declared here
inline auto make_args_checked(const S& format_str,
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9207/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6:
error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9207/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36114/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\bucket_logger_impl.h(26): error C2039: "make_args_checked": is not a member of "fmt::v7::detail" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36114/ )

Compile error at    fmt/format.h:2873:27:
error: constexpr variable "invalid_format" must be initialized by a constant expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36114/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10914/ : FAILURE

Compile error at [2021-05-27T11:38:13.795Z] ../kv_engine/engines/ep/src/bucket_logger_impl.h:26:37:
error: ?make_args_checked? is not a member of ?fmt::v7::detail?; did you mean ?make_checked??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10914/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10770/ : FAILURE

Compile error at [2021-05-27T11:38:01.780Z] ../kv_engine/engines/ep/src/bucket_logger_impl.h:26:37:
error: ?make_args_checked? is not a member of ?fmt::v7::detail?; did you mean ?make_checked??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10770/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11174/ : FAILURE

Compile error at [2021-05-27T11:37:51.593Z] ../kv_engine/engines/ep/src/bucket_logger_impl.h:26:24:
error: no template named "make_args_checked" in namespace "fmt::v7::detail"; did you mean "fmt::make_args_checked"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11174/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18736/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18736/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9838/ : FAILURE

Compile error at [2021-05-27T11:32:12.184Z] ../kv_engine/engines/ep/src/bucket_logger_impl.h:26:24:
error: no template named "make_args_checked" in namespace "fmt::v7::detail"; did you mean "fmt::make_args_checked"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9838/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7783/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
